Added some routes for users/permissions.
users/permissions: gives permissions of logged in user.

users/permissions/list: gives permissions of all users to admin only.
