# docs/swagger.yaml
@@ -308,6 +308,15 @@ definitions:
       url:
         type: string
     type: object
+  model.Permission:
+    properties:
+      actions:
+        items:
+          type: string
+        type: array
+      resource:
+        type: string
+    type: object
   model.Post:
     properties:
       categories:
@@ -699,6 +708,31 @@ definitions:
         type: string
     required:
     - name
+    type: object
+  user.allPermissionRes:
+    properties:
+      birth_date:
+        type: string
+      created_at:
+        type: string
+      deleted_at:
+        type: string
+      email:
+        type: string
+      first_name:
+        type: string
+      gender:
+        type: string
+      id:
+        type: integer
+      last_name:
+        type: string
+      permissions:
+        items:
+          $ref: '#/definitions/model.Permission'
+        type: array
+      updated_at:
+        type: string
     type: object
   user.paging:
     properties:
@@ -1815,6 +1849,60 @@ paths:
           schema:
             $ref: '#/definitions/user.paging'
       summary: Get users with space access
+      tags:
+      - Users
+  /core/users/permissions:
+    get:
+      description: Get user's permission
+      operationId: get-users-permission
+      parameters:
+      - description: User ID
+        in: header
+        name: X-User
+        required: true
+        type: string
+      - description: Space ID
+        in: header
+        name: X-Space
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.Permission'
+            type: array
+      summary: Get user's permission
+      tags:
+      - Users
+  /core/users/permissions/list:
+    get:
+      description: Get all user's permission
+      operationId: get-all-users-permission
+      parameters:
+      - description: User ID
+        in: header
+        name: X-User
+        required: true
+        type: string
+      - description: Space ID
+        in: header
+        name: X-Space
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/user.allPermissionRes'
+            type: array
+      summary: Get all user's permission
       tags:
       - Users
   /fact-check/claimants:
