# service/core/action/user/route.go
@@ -7,6 +7,8 @@ func Router() chi.Router {
 	r := chi.NewRouter()
 
 	r.Get("/", list)
+	r.Get("/permissions", userpermissions)
+	r.Get("/permissions/list", allpermissions)
 
 	return r
 }
